[gd_scene load_steps=14 format=3 uid="uid://cwfu5gdkeefe3"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_nernh"]
[ext_resource type="PackedScene" uid="uid://bdupkh0grwy27" path="res://scenes/player/player.tscn" id="2_mkirp"]
[ext_resource type="PackedScene" uid="uid://dimee6owoxhf2" path="res://scenes/level.tscn" id="3_lvuoj"]
[ext_resource type="Shader" path="res://shaders/sky.gdshader" id="3_mfmvq"]
[ext_resource type="PackedScene" uid="uid://b05wfry8s5tbp" path="res://scenes/pumpkin_reload.tscn" id="6_klwtk"]
[ext_resource type="Script" path="res://scripts/reload_spawn.gd" id="6_w1d3r"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="8_bqhqc"]
[ext_resource type="Texture2D" uid="uid://v3n4gm8u4wod" path="res://assets/ui/bars/health-under.png" id="9_5cnij"]
[ext_resource type="Texture2D" uid="uid://bcun7ikaou25c" path="res://assets/ui/bars/health-over.png" id="10_5box4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ynxdi"]
shader = ExtResource("3_mfmvq")
shader_parameter/color_top = Color(0.34125, 0.0525, 0.375, 1)
shader_parameter/color_horizon = Color(0.470703, 0.115057, 0.256023, 1)
shader_parameter/color_bottom = Color(0.345703, 0.25582, 0.134824, 1)
shader_parameter/exponent_factor_top = 5.0
shader_parameter/exponent_factor_bottom = 5.0
shader_parameter/intensity_amp = 1.0

[sub_resource type="Sky" id="Sky_bxymo"]
sky_material = SubResource("ShaderMaterial_ynxdi")

[sub_resource type="Environment" id="Environment_yd3rs"]
background_mode = 2
background_color = Color(0.262745, 0.792157, 0.792157, 1)
sky = SubResource("Sky_bxymo")
ambient_light_source = 2
ambient_light_color = Color(0.882812, 0.882812, 0.882812, 1)
ambient_light_energy = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_glomt"]
size = Vector3(37.0824, 1, 37.3059)

[node name="Main" type="Node3D"]
script = ExtResource("1_nernh")

[node name="Player" parent="." instance=ExtResource("2_mkirp")]

[node name="Level" parent="." instance=ExtResource("3_lvuoj")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yd3rs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.731723, 0.681603, 0, -0.681603, 0.731723, 0, 9.75889, 0)

[node name="SpawnReloadTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="PumpkinSpawnRange" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("6_w1d3r")
reload_scene = ExtResource("6_klwtk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PumpkinSpawnRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0239105, 0, -0.679527)
shape = SubResource("BoxShape3D_glomt")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("8_bqhqc")

[node name="AmmoLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 15.0
offset_top = 75.0
offset_right = 97.0
offset_bottom = 98.0
text = "Ammo: %s"

[node name="PlayerHealthLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 14.0
offset_top = 48.0
offset_right = 96.0
offset_bottom = 71.0
text = "Health: %s"

[node name="PlayerHealthBar" type="TextureProgressBar" parent="UI"]
layout_mode = 0
offset_left = 14.0
offset_top = 12.0
offset_right = 270.0
offset_bottom = 28.0
max_value = 10.0
value = 5.0
texture_under = ExtResource("9_5cnij")
texture_progress = ExtResource("10_5box4")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -266.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="life_changed" from="Player" to="UI" method="_on_player_life_changed"]
[connection signal="remaining_ammo_changed" from="Player" to="UI" method="_on_player_remaining_ammo_changed"]
[connection signal="timeout" from="SpawnReloadTimer" to="PumpkinSpawnRange" method="_on_timer_spawn_pumpkin_timeout"]
[connection signal="ReloadPlayer" from="PumpkinSpawnRange" to="Player" method="_on_pumpkin_spawn_range_reload_player"]
